fix: ColorRampSelector z-index

--- a/src/components/ColorRampSelector.module.css
+++ b/src/components/ColorRampSelector.module.css
@@ -25,7 +25,7 @@
 }
 
 .dropdownContainer {
-  z-index: 1;
+  z-index: 10;
   position: absolute;
   top: calc(--height + 1px);
   display: flex;
